--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Album</title>
+    <title>My Photo Bucket</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1.12.min.js"></script>
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center my-4">Image Album</h1>
+        <h1 class="text-center my-4">My Photo Bucket</h1>
         <div class="album" id="album">
             <!-- Images will be dynamically added here -->
         </div>
