better sizing of images

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center my-4">My Photo Bucket</h1>
-        <div class="album" id="album">
+        <h1 class="text-center my-4">Responsive Image Mosaic</h1>
+
+        <div class="mosaic-container" id="mosaic-container">
             <!-- Images will be dynamically added here -->
         </div>
     </div>
