--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center my-4">Responsive Image Mosaic</h1>
-
+        <h1 class="text-center my-4">My Photo Album</h1>
+        <p>Just a collection of photos I've taken and thought were worthy to share.</p>
         <div class="mosaic-container" id="mosaic-container">
             <!-- Images will be dynamically added here -->
         </div>
